# perl-Amazon-Credentials

./: .gitignore  .perlcriticrc  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  NEWS.md  README-BUILD.md  README-TESTING.md  README.md  TBD  bootstrap  buildspec.yml  configure  configure.ac  perl-Amazon-Credentials.spec.in  release-notes-1.1.26.md  release-notes-1.2.0.md  release-notes.mk
cpan/: Makefile.am  buildspec.yml  extra-files  recommends  requires  test-requires
src/examples/: check-expired-token.pl  test-aws-credentials.pl
src/main/perl/: MANIFEST  Makefile.PL  Makefile.am  UnitTestSetup.pm  get-creds-from-process
src/main/perl/lib/: Makefile.am  Makefile.in
src/main/perl/lib/Amazon/: Credentials.pm.in
src/main/perl/lib/Amazon/Credentials/HTTP/: Response.pm.in  UserAgent.pm.in
src/main/perl/lib/t/: 01-credentials.t  02-credentials.t
src/main/perl/t/: 00-credentials.t  00-load.t  01-credentials.t  02-credentials.t  02-web-identity.t  03-container.t  04-process.t  05-format.t  06-security.t  07-encryption.t  08-imdsv2.t  09-live-credentials.t  10-logging.t  11-order.t  12-error.t  13-env.t  14-utils.t
